--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,18 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30241'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-statistical-programmer-30233'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/medidata-solutions/job/oQfDafwC'>Medidata Solutions Careers - Sales Compensation Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -83,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -144,7 +156,7 @@ to?...</p>
 analytics team by hiring a Senior Healthcare Data Analyst. This role is 
 responsible?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lively/jobs/4359979002'>Job Application for Data Analyst at Join the Lively team!</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lively/jobs/4359979002'>Job Application for Data Analyst at Join the Lively team!</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... We're looking for an all-star Data Analyst to join the team. As Lively's first data 
 hire, you'll be responsible for data needs throughout the organization. You'll build
@@ -162,7 +174,7 @@ analyst?...</p>
 returnship for experienced professionals returning to the workforce after taking 
 time?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
+<h5><a href='https://jobs.lever.co/o2ebrands/4c7a2625-ba87-42d5-9c13-c46b0594e102'>O2E Brands - Data Analyst - O2E Brands</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -200,7 +212,7 @@ DVS) development in all therapeutic areas; writing specifications for analysis?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/crime-data-analyst-i-25101'>Crime Data Analyst I - ELSEVIER Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/crime-data-analyst-i-25101'>Crime Data Analyst I - ELSEVIER Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... This position exists to provide Crime Analysis services to a customer of 
 LexisNexis to include tactical, strategic, administrative, and operational...</p>
@@ -256,7 +268,7 @@ Berlin (published: 15.05.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premisehealth/job/o8cBafwP'>Premise Health Careers - Member Health Management Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -339,7 +351,7 @@ Stuart.</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hotstar/5ec7e5d9-0711-45a7-aeb0-25142da3c51d/apply'>Hotstar - Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Data Analyst. Mumbai, Maharashtra. 3. Ad Sales ? Sales. Full time. Submit your 
 application. LinkedIn profile. Loading. Apply with Linkedin. Profile added.</p>
@@ -470,19 +482,6 @@ Ellaktor.</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/glovo/jobs/4365426002'>Job Application for Data Analyst Intern at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/riskspan/job/oD7zafwd'>RiskSpan Careers - Data Analyst / Financial Analyst - Charleston</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... Data Analyst / Financial Analyst - Charleston. 02 Data Management Charleston, 
-South Carolina. Apply. Description. Description. Want to be a part of a growing?...</p>
-<hr/>
-<h5><a href='https://healthscope.referrals.selectminds.com/jobs/data-analyst-3366'>Data Analyst - Healthscope Careers</a></h5> 
-<p><span class="badge badge-light">Sydney</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/artefact/jobs/4137429002'>Job Application for Junior Data Analyst at Artefact</a></h5> 
-<p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
